--- a/styles/main.css
+++ b/styles/main.css
@@ -25,7 +25,14 @@ nav {
   margin: 0 2vh;
   display: flex;
   flex-flow: column;
+  align-items: center;
   z-index: 2;
+}
+
+#game-select {
+  font-family: "Roboto";
+  font-size: calc(10px + 1vmin);
+  padding: 5px;
 }
 
 .icon {
@@ -108,6 +115,7 @@ nav {
 }
 
 #board {
+  /* width: 80vw; */
   height: 95vh;
   border: solid black .5vh;
   user-select: none;
@@ -121,6 +129,7 @@ nav {
 }
 
 #dice {
+  box-sizing: content-box;
   opacity: 0;
   width: 50vmin;
   height: 50vmin;
@@ -144,6 +153,7 @@ nav {
   justify-content: center;
   align-items: center;
   height: 15%;
+  width: 110%;
   background: rgba(0, 0, 0, .7);
   color: white;
   font: bold 3vmin Roboto, "sans serif";
